<resources>
    <string name="app_name">My Notes</string>
    <string name="lorem_note">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="label_must_fill">Wajib diisi.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_ijin_galery">Ijin galery ditolak</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="edit_7_1_2020">edit.7.1.2020</string>
    <string name="todo4">TODO</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="profile_photo">profile_photo</string>
    <string name="name">Name</string>
    <string name="typing">typing...</string>
    <string name="save">Save</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="my_note">My Note</string>
    <string name="please_login_with_your_email_and_password">Please login with your email and password</string>
    <string name="email">Email</string>
    <string name="typing_email">typing email</string>
    <string name="password">Password</string>
    <string name="typing_password">typing password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="todo7">TODO</string>
    <string name="register2">Register</string>
    <string name="name2">Name</string>
    <string name="add_name">add name</string>
    <string name="add_email">add email</string>
    <string name="password2">Password</string>
    <string name="add_password">add password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_confirm_password">add confirm password</string>
    <string name="save2">Save</string>
    <string name="email2">Email</string>
    <string name="file_empty">File Empty</string>
    <string name="profil">Profil</string>
    <string name="profile_photo2">profile_photo</string>
    <string name="edit_profil2">Edit Profil</string>
    <string name="logout">Logout</string>
    <string name="todo8">TODO</string>
</resources>