<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".login.LoginActivity">


        <ImageView
            android:id="@+id/iv_bag"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/custome_background_text_view_1"
            android:contentDescription="@string/todo6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/my_note"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/please_login_with_your_email_and_password"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="65dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/email"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custome_background_text_view_3"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/typing_email"
                android:padding="15dp"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/password"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/trasparan"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/custome_background_text_view_3"
                    android:fontFamily="@font/poppinsregular"
                    android:hint="@string/typing_password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:autofillHints="password" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:backgroundTint="@color/teal_200"
                android:fontFamily="@font/poppinsmedium"
                android:textAllCaps="false"
                android:text="@string/login"
                android:textSize="@dimen/_18ssp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:backgroundTint="@color/trasparan"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"

                />

        </LinearLayout>
    </RelativeLayout>

</layout>
