<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".register.RegisterActivity">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">


            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="15dp"
                android:background="?selectableItemBackground"
                android:contentDescription="@string/todo7"
                android:foreground="?selectableItemBackground"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_60sdp"
                android:text="@string/register2"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_55sdp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="60dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/name2"
                android:textSize="@dimen/_18ssp" />


            <EditText
                android:id="@+id/etNameRegister"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:autofillHints="name"
                android:background="@drawable/custome_background_text_view_3"
                android:hint="@string/add_name"
                android:inputType="textPersonName"
                android:padding="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/email2"
                android:textSize="@dimen/_18ssp" />

            <EditText
                android:id="@+id/etEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:autofillHints="emailAddress"
                android:background="@drawable/custome_background_text_view_3"
                android:hint="@string/add_email"
                android:inputType="textEmailAddress"
                android:padding="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/password2"
                android:textSize="@dimen/_18ssp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/trasparan"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:autofillHints="password"
                    android:background="@drawable/custome_background_text_view_3"
                    android:hint="@string/add_password"
                    android:inputType="textPassword"
                    android:padding="15dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/confirm_password"
                android:textSize="@dimen/_18ssp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/trasparan"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etConPasRegister"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:autofillHints="password"
                    android:background="@drawable/custome_background_text_view_3"
                    android:hint="@string/add_confirm_password"
                    android:inputType="textPassword"
                    android:padding="15dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnSaveRegister"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_60sdp"
                android:backgroundTint="@color/teal_200"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/save2"
                android:textAllCaps="false"
                android:textSize="@dimen/_15ssp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>