<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.example.mynotes.edit.EditActivity" />

        <variable
            name="name"
            type="String" />

        <variable
            name="email"
            type="String" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".edit.EditActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/trasparan"
            android:fillViewport="true"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".ui.AddFriendActivity">


                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/poppinsbold"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <ImageView
                        android:id="@+id/back"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="15dp"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?selectableItemBackground"
                        android:src="@drawable/back"
                        android:contentDescription="@string/todo4" />

                    <TextView
                        android:id="@+id/tvLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_margin="70dp"
                        android:fontFamily="@font/poppinsmedium"
                        android:text="@string/edit_profil"
                        android:textSize="30sp" />


                </LinearLayout>


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/EditPhoto"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:contentDescription="@string/profile_photo"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@drawable/fotoedit" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="65dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/name"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/etNameProfil"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/custome_background_text_view_3"
                    android:fontFamily="@font/poppinsregular"
                    android:hint="@string/typing"
                    android:padding="8dp"
                    android:autofillHints="name"
                    android:inputType="text" />

                <Button
                    android:id="@+id/btnSaveProfil"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_220sdp"
                    android:backgroundTint="@color/teal_200"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/save"
                    android:textSize="20sp" />

            </LinearLayout>


        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>