<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="user"
            type="com.example.mynotes.data.User" />
    </data>

    <FrameLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".home.screen.ProfilFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/profil"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/profile_photo2"
                android:src="@drawable/picture" />

            <TextView
                android:id="@+id/crocodicDeveloper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppinsbold"
                android:gravity="center"
                android:text='@{user.name}'
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/developerCrocodic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:gravity="center"
                android:text='@{user.email}'
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/editProfil"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/edit_profil2"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/rectangleProfil"
                    android:layout_width="30dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="80dp"
                    android:background="?selectableItemBackground"
                    android:foreground="?selectableItemBackground"
                    android:src="@drawable/ic_person" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Logout"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/logout"
                    android:textColor="@color/red"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/rectangleLogout"
                    android:layout_width="30dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="80dp"
                    android:background="?selectableItemBackground"
                    android:foreground="?selectableItemBackground"
                    android:src="@drawable/ic_logout"
                    android:contentDescription="@string/todo8" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</layout>